# kiki-cockpit

./: .dockerignore  .gitignore  Dockerfile  README.md  featured.yaml  package.json  pnpm-lock.yaml  pyproject.toml
apps/api/: benchmarks.yaml  pyproject.toml
apps/api/src/ailiance_demo/: __init__.py  config.py  deps.py  main.py
apps/api/src/ailiance_demo/auth/: tailscale.py
apps/api/src/ailiance_demo/models/: __init__.py  benchmark.py  dataset.py  model_card.py  status.py  training_run.py  worker_status.py
apps/api/src/kiki_cockpit/: __init__.py  config.py  deps.py  main.py
apps/api/tests/: conftest.py
apps/api/tests/fixtures/: featured_sample.yaml
apps/api/tests/integration/: test_admin_benchmarks.py  test_admin_dataset_flags.py  test_admin_datasets.py  test_admin_health.py  test_chat_endpoint.py  test_eval_browser_endpoint.py  test_eval_endpoint.py  test_health.py  test_models_endpoint.py  test_status_endpoint.py  test_training_endpoint.py  test_workers_endpoint.py
apps/api/tests/unit/: test_benchmark_model.py  test_benchmarks_service.py  test_chat_proxy.py  test_dataset_flags_service.py  test_dataset_model.py  test_datasets_service.py  test_deps_datasets.py  test_eval_index.py  test_featured.py  test_hf_cache.py  test_hf_sync.py  test_log_tail.py  test_schemas.py  test_tailscale_auth.py  test_training_launcher.py  test_training_runs.py  test_workers.py
deploy/collector/: Dockerfile  cc.kiki.collector.plist  pyproject.toml
deploy/collector/src/ailiance_collector/: __init__.py  main.py
deploy/collector/src/kiki_collector/: __init__.py  main.py
(+165 files in other folders)
