[project]
name = "ailiance-collector"
version = "0.1.0"
description = "Read-only filesystem-over-HTTP shim for ailiance-demo. Runs on the host that owns training logs and eval results (studio)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0",
  "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ailiance_collector"]

[tool.ruff]
line-length = 100
target-version = "py312"
